# pep425

./: README.md  pep425.py  pyproject.toml  test_pep425.py
pep425/: __init__.py  _generic.py  _mac.py
tests/: test_mac.py  test_pep425.py  test_tag_set.py
